Adapt linux emulation to use cv for vfork wait.

Submitted by:	Takahiro Kurosawa <takahiro.kurosawa gmail com>
PR:	kern/131506